app/assets/stylesheets/_map.scss
@import "responsive";
@import "variables";

.leaflet-popup-content-wrapper {
  border-radius: 2px;
}

.marker-cluster-small, .marker-cluster-medium, .marker-cluster-large {
  background-color: #4598d0;
  background-color: rgba(#4598d0, 0.9);
  background-image: linear-gradient(rgba(#4598d0, 0.9), rgba(#1374cf, 0.9));
  border: 1px solid #597393;
  border: 1px solid rgba(#597393, 0.9);
  text-align: center;

  div {
    margin: 5px;
    font-weight: bold;
    background-color: #fff;

    width: 28px;
    height: 28px;
  }
}

.map {
  width: 100%;
  height: 250px;
}

#index_map {

  .favorites, .getstarted {
    background-image: image-url("hbg.png");
    height: 500px;

    .content, ul {
      background: #fff;
      border-bottom: 1px solid $frame-color;
    }
  }

  .index-map {
    background-color: transparent;

    input {
      height: 52px;
      padding: 6px 15px;
      border: none;
      margin: 0;
      width: 100%;
      font-size: 2em;
      box-shadow: 0 2px 5px rgba(0,0,0,.05) inset;
      @extend %transition;

      &:hover, &:focus {
        box-shadow: 0 2px 5px rgba(0,0,0,.2) inset;
        @extend %transition;
      }
    }

    .map {
      height: 448px;
      height: 500px;
    }
  }

  @include media(handheld) {
    .map {
      height: 350px;
    }

    .favorites {
      width: 100%;
      height: auto;
      border-bottom: none;

      &.empty { display: none; visibility: hidden; }
    }
  }

  @include media(mobile) {
    .map {
      height: 250px;
    }
  }
}

